Bug 95379 - Connection from remote server refused
Summary: Connection from remote server refused
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: App/xinit (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Mac OS X (All)
: medium blocker
Assignee: Jeremy Huddleston Sequoia
QA Contact: Jeremy Huddleston Sequoia
URL:
Whiteboard:
Keywords:
: 96394 96771 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-05-13 09:01 UTC by Piero Malcovati
Modified: 2016-07-02 00:00 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Piero Malcovati 2016-05-13 09:01:37 UTC
After installing XQuartz 2.7.9 on MacOSX 10.11.4, if I start XQuartz, type xhost + and then rlogin to a remote server, setenv DISPLAY to <hostname_of_my_mac>:0.0 and run for example xterm, I get the error:
xterm: Xt error: Can't open display: <hostname_of_my_mac>:0.0

Before updating to 2.7.9 (with 2.7.8) the same commands were working fine.

In XQuartz preferences both Authenticate Connections and Allow Connections from Network Clients are enabled.

I also tried to start XQuartz, type xhost +, setenv DISPLAY localhost:0.0 on my Mac, when launching xterm I get the same error, whereas if I setenv DISPLAY :0.0 it works fine.

I tried to delete the .Xauthority file but nothing changed.

With ssh -X everything works fine.

Help please.

Thank you.
Comment 1 Jeremy Huddleston Sequoia 2016-05-13 20:49:28 UTC
I think I remember seeing that xorg-server was disabling TCP by default.  We can probably re-enable it if that's the case.
Comment 2 Piero Malcovati 2016-05-16 14:53:09 UTC
Can you please let me know when a version with this bug fixed will be available (also beta).
Thank you.
Comment 3 Piero Malcovati 2016-05-16 15:25:19 UTC
I was able to fix the problem by adding after line 107 of /opt/X11/bin/startx
    defaultserverargs="$defaultserverargs -nolisten tcp"
the following two lines:
else
    defaultserverargs="$defaultserverargs -listen tcp"
Now everything works!!
Comment 5 Jeremy Huddleston Sequoia 2016-05-28 20:49:05 UTC
This should be addressed in XQuartz 2.7.10 beta2 or later (not released yet).
Comment 6 Jeremy Huddleston Sequoia 2016-06-05 19:28:07 UTC
*** Bug 96394 has been marked as a duplicate of this bug. ***
Comment 7 Jeremy Huddleston Sequoia 2016-07-02 00:00:29 UTC
*** Bug 96771 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.