startx: Add -listen tcp if nolisten_tcp is disabled for XQuartz

https://bugs.freedesktop.org/show_bug.cgi?id=95379

Signed-off-by: Jeremy Huddleston Sequoia <jeremyhu@apple.com>